primeiro esboço incompleto do portfólio

--- a/index.html
+++ b/index.html
@@ -8,6 +8,61 @@
     <title>Projeto Portfólio | HTML CSS</title>
 </head>
 <body>
-    
+    <header>
+        <div class="menu-container">
+            <img class="logo" src="./assets/Logo.png" alt="Logo Lopes Dev">
+            <nav class="menu">
+                <ul class="menu-items">
+                    <li class="item"><a href="#inicio">Início</a></li>
+                    <li class="item"><a href="#sobre">Sobre Mim</a></li>
+                    <li class="item"><a href="#habilidades">Habilidades</a></li>
+                    <li class="item"><a href="#">Projetos</a></li>
+                    <li class="item"><a href="#">Contato</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+    <main id="inicio">
+        <div class="containe">
+
+        </div>
+    </main>    
+    <section id="sobre">
+        <div class="container">
+            <div class="content-sobre">
+                <div class="header">
+                    <h2>Sobre Mim</h2>
+                    <div class="lines">
+                        <div class="circle"></div>
+                    </div>
+                </div>
+                <div class="body">
+                    <div class="left">
+                        <img src="./assets/Foto.jpg" alt="">
+                    </div>
+                    <div class="right">
+                        <h2>Lucas Lopes</h2>
+                        <h3>Desenvolvedor Front End</h3>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Amet sunt labore distinctio consequuntur odit voluptates! Distinctio, quasi? Sequi ullam veniam sit explicabo dolores atque, voluptates soluta iure ipsam aspernatur facere.Lorem ipsum, dolor sit amet consectetur adipisicing elit. Amet sunt labore distinctio consequuntur odit voluptates! Distinctio, quasi? Sequi ullam veniam sit explicabo dolores atque, voluptates soluta iure ipsam aspernatur facere.Lorem ipsum, dolor sit amet consectetur adipisicing elit. Amet sunt labore distinctio consequuntur odit voluptates! Distinctio, quasi? Sequi ullam veniam sit explicabo dolores atque, voluptates soluta iure ipsam aspernatur facere.Lorem ipsum, dolor sit amet consectetur adipisicing elit. Amet sunt labore distinctio consequuntur odit voluptates! Distinctio, quasi? Sequi ullam veniam sit explicabo dolores atque, voluptates soluta iure ipsam aspernatur facere.Lorem ipsum, dolor sit amet consectetur adipisicing elit. Amet sunt labore distinctio consequuntur odit voluptates! Distinctio, quasi? Sequi ullam veniam sit explicabo dolores atque, voluptates soluta iure ipsam aspernatur facere.Lorem ipsum, dolor sit amet consectetur adipisicing elit. Amet sunt labore distinctio consequuntur odit voluptates! Distinctio, quasi? Sequi ullam veniam sit explicabo dolores atque, voluptates soluta iure ipsam aspernatur facere.Lorem ipsum, dolor sit amet consectetur adipisicing elit. Amet sunt labore </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section id="habilidades">
+        <div class="container">
+            <div class="content-sobre">
+                <div class="header">
+                    <h2>Habilidades</h2>
+                    <div class="lines">
+                        <div class="circle"></div>
+                    </div>
+                </div>
+                <div class="body">
+                    
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
