Adição da section habilidades e do conteúdo do banner

--- a/index.html
+++ b/index.html
@@ -1,16 +1,20 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="./assets/Logo.png" type="image/x-icon">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Projeto Portfólio | HTML CSS</title>
 </head>
+
 <body>
     <header>
         <div class="menu-container">
-            <img class="logo" src="./assets/Logo.png" alt="Logo Lopes Dev">
+            <img class="logo" src="./assets/Logo.png" alt="Logo Lopes Dev" draggable="false">
             <nav class="menu">
                 <ul class="menu-items">
                     <li class="item"><a href="#inicio">Início</a></li>
@@ -23,13 +27,16 @@
         </div>
     </header>
     <main id="inicio">
-        <div class="containe">
-
+        <div class="container banner">
+            <div class="content-banner">
+                <h1>Desenvolvedor <span>Web</span></h1>
+                <a href="#projetos">Meus Projetos</a>
+            </div>
         </div>
-    </main>    
+    </main>
     <section id="sobre">
         <div class="container">
-            <div class="content-sobre">
+            <div class="content">
                 <div class="header">
                     <h2>Sobre Mim</h2>
                     <div class="lines">
@@ -42,8 +49,24 @@
                     </div>
                     <div class="right">
                         <h2>Lucas Lopes</h2>
-                        <h3>Desenvolvedor Front End</h3>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Amet sunt labore distinctio consequuntur odit voluptates! Distinctio, quasi? Sequi ullam veniam sit explicabo dolores atque, voluptates soluta iure ipsam aspernatur facere.Lorem ipsum, dolor sit amet consectetur adipisicing elit. Amet sunt labore distinctio consequuntur odit voluptates! Distinctio, quasi? Sequi ullam veniam sit explicabo dolores atque, voluptates soluta iure ipsam aspernatur facere.Lorem ipsum, dolor sit amet consectetur adipisicing elit. Amet sunt labore distinctio consequuntur odit voluptates! Distinctio, quasi? Sequi ullam veniam sit explicabo dolores atque, voluptates soluta iure ipsam aspernatur facere.Lorem ipsum, dolor sit amet consectetur adipisicing elit. Amet sunt labore distinctio consequuntur odit voluptates! Distinctio, quasi? Sequi ullam veniam sit explicabo dolores atque, voluptates soluta iure ipsam aspernatur facere.Lorem ipsum, dolor sit amet consectetur adipisicing elit. Amet sunt labore distinctio consequuntur odit voluptates! Distinctio, quasi? Sequi ullam veniam sit explicabo dolores atque, voluptates soluta iure ipsam aspernatur facere.Lorem ipsum, dolor sit amet consectetur adipisicing elit. Amet sunt labore distinctio consequuntur odit voluptates! Distinctio, quasi? Sequi ullam veniam sit explicabo dolores atque, voluptates soluta iure ipsam aspernatur facere.Lorem ipsum, dolor sit amet consectetur adipisicing elit. Amet sunt labore </p>
+                        <h3>Desenvolvedor Front End / Web</h3>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Amet sunt labore distinctio
+                            consequuntur odit voluptates! Distinctio, quasi? Sequi ullam veniam sit explicabo dolores
+                            atque, voluptates soluta iure ipsam aspernatur facere.Lorem ipsum, dolor sit amet
+                            consectetur adipisicing elit. Amet sunt labore distinctio consequuntur odit voluptates!
+                            Distinctio, quasi? Sequi ullam veniam sit explicabo dolores atque, voluptates soluta iure
+                            ipsam aspernatur facere.Lorem ipsum, dolor sit amet consectetur adipisicing elit. Amet sunt
+                            labore distinctio consequuntur odit voluptates! Distinctio, quasi? Sequi ullam veniam sit
+                            explicabo dolores atque, voluptates soluta iure ipsam aspernatur facere.Lorem ipsum, dolor
+                            sit amet consectetur adipisicing elit. Amet sunt labore distinctio consequuntur odit
+                            voluptates! Distinctio, quasi? Sequi ullam veniam sit explicabo dolores atque, voluptates
+                            soluta iure ipsam aspernatur facere.Lorem ipsum, dolor sit amet consectetur adipisicing
+                            elit. Amet sunt labore distinctio consequuntur odit voluptates! Distinctio, quasi? Sequi
+                            ullam veniam sit explicabo dolores atque, voluptates soluta iure ipsam aspernatur
+                            facere.Lorem ipsum, dolor sit amet consectetur adipisicing elit. Amet sunt labore distinctio
+                            consequuntur odit voluptates! Distinctio, quasi? Sequi ullam veniam sit explicabo dolores
+                            atque, voluptates soluta iure ipsam aspernatur facere.Lorem ipsum, dolor sit amet
+                            consectetur adipisicing elit. Amet sunt labore </p>
                     </div>
                 </div>
             </div>
@@ -51,15 +74,35 @@
     </section>
     <section id="habilidades">
         <div class="container">
-            <div class="content-sobre">
+            <div class="content">
                 <div class="header">
                     <h2>Habilidades</h2>
                     <div class="lines">
                         <div class="circle"></div>
                     </div>
                 </div>
-                <div class="body">
-                    
+                <div class="body habilidades">
+                    <div class="habilidade">
+                        <h2>HTML</h2>                        
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Amet sunt labore distinctio
+                            consequuntur odit voluptates! Distinctio, quasi? Sequi ullam veniam sit explicabo dolores
+                            atque, voluptates soluta iure ipsam aspernatur facere.</p>
+                            <img src="/assets/html-5.png" alt="">
+                    </div>
+                    <div class="habilidade">
+                        <h2>CSS</h2>                        
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Amet sunt labore distinctio
+                            consequuntur odit voluptates! Distinctio, quasi? Sequi ullam veniam sit explicabo dolores
+                            atque, voluptates soluta iure ipsam aspernatur facere.</p>
+                            <img src="./assets/css-3.png" alt="">
+                    </div>
+                    <div class="habilidade">
+                        <h2>Javascript</h2>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Amet sunt labore distinctio
+                            consequuntur odit voluptates! Distinctio, quasi? Sequi ullam veniam sit explicabo dolores
+                            atque, voluptates soluta iure ipsam aspernatur facere.</p>
+                            <img src="./assets/script-java.png" alt="">
+                    </div>
                 </div>
             </div>
         </div>
