Adição da seção de projetos, contém bugs a serem resolvidos

--- a/index.html
+++ b/index.html
@@ -107,17 +107,68 @@
             </div>
         </div>
     </section>
-    <section id="habilidades">
-        <div class="container">
+    <section id="projetos">
+        <div class="container galeria">
             <div class="content">
                 <div class="header">
-                    <h2>Habilidades</h2>
+                    <h2>Projetos</h2>
                     <div class="lines">
                         <div class="circle"></div>
                     </div>
                 </div>
-                <div class="body ">
-
+                <div class="body column">      
+                    <div class="line1">
+                        <div class="content-projeto">
+                            <div class="content-image">
+                                <img src="./assets/projeto.png" alt="">                        
+                            </div>
+                            <div class="image-black">
+                                <h3>Projeto em andamento</h3>
+                            </div>
+                        </div>   
+                        <div class="content-projeto">
+                            <div class="content-image">
+                                <img src="./assets/projeto.png" alt="">                        
+                            </div>
+                            <div class="image-black">
+                                <h3>Projeto em andamento</h3>
+                            </div>
+                        </div>                 
+                        <div class="content-projeto">
+                            <div class="content-image">
+                                <img src="./assets/projeto.png" alt="">                        
+                            </div>
+                            <div class="image-black">
+                                <h3>Projeto em andamento</h3>
+                            </div>
+                        </div>
+                    </div>              
+                    <div class="line2">
+                        <div class="content-projeto">
+                            <div class="content-image">
+                                <img src="./assets/projeto.png" alt="">                        
+                            </div>
+                            <div class="image-black">
+                                <h3>Projeto em andamento</h3>
+                            </div>
+                        </div>   
+                        <div class="content-projeto">
+                            <div class="content-image">
+                                <img src="./assets/projeto.png" alt="">                        
+                            </div>
+                            <div class="image-black">
+                                <h3>Projeto em andamento</h3>
+                            </div>
+                        </div>                 
+                        <div class="content-projeto">
+                            <div class="content-image">
+                                <img src="./assets/projeto.png" alt="">                        
+                            </div>
+                            <div class="image-black">
+                                <h3>Projeto em andamento</h3>
+                            </div>
+                        </div>
+                    </div>              
                 </div>
             </div>
         </div>
